src/app/play/play.component.css
#side-produced-prefixes {
    height: 50px;
}

.main-tab {
    height: 100%; width: 100%;
    background-color: white;
}

#sidebar {
    padding: 1em;
    width: 100%;
    overflow: auto;
    overflow-y: scroll;
    scrollbar-width: thin;
}

.tab-container {
    height: 100%;
    width: 100%;
}

.tab-container.main-lower ::ng-deep .main-space {
    overflow: auto;
}

.console {
    height: 100%;
    width: 100%;
    padding: 2px;
    overflow: hidden;
}

